<resources>
    <string name="app_name">Healthy Sanity</string>
    <string name="hello">Cześć</string>
    <string name="trendingText1">Jest to aplikacja, która pomoże Ci wejść na zdrową drogę życia.</string>
    <string name="trendingText2">Rozplanuj sobie dzień, przypisując do dni tygodnia wybrane przez Ciebie zadania</string>
    <string name="trendingText3">fizyczne lub psychiczne oraz możesz stworzyć swoje własne!</string>
    <string name="kategorie">Kategorie</string>
    <string name="kalendarz">Kalendarz</string>
    <string name="home">Strona główna</string>
    <string name="wyzwania">Wyzwania</string>
    <string name="autorzy">Autorzy</string>
    <string name="username">Użytkownik</string>
    <string name="quest_search_hint">Szukaj zadania</string>
    <string name="trending">TRENDING</string>
    <string name="choose_category">Wybierz kategorie</string>
    <string name="physic_health">Zdrowie fizyczne</string>
    <string name="check_objectives_physic">Przeglądaj zadania związane ze zdrowiem fizycznym!</string>
    <string name="custom_category">Własna kategoria</string>
    <string name="custom_category_explanation">Brakuje zadań? Stwórz swoje własne!</string>
    <string name="mental_category_hint">Przeglądaj zadania związane ze zdrowiem psychicznym!</string>
    <string name="mental_health">Zdrowie psychiczne</string>
    <string name="stats">Statystyki</string>
    <string name="badges">Odznaki</string>
    <string name="challenges">Wyzwania</string>
    <string name="category">Kategorie</string>
    <string name="calendar">Kalendarz</string>
    <string name="main_page">Strona główna</string>
    <string name="communicate">Społeczność</string>
    <string name="share">Podziel się</string>
    <string name="choose_date">Wybierz date</string>
    <string name="today">Dzisiaj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statystyki</string>
    <string name="overview">Przegląd</string>
    <string name="info">Informacje</string>
    <string name="profile">Profil</string>
    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="physical_category">Kategoria fizyczna</string>
    <string name="running">Bieganie</string>
    <string name="mental_category">Kategoria psychiczna</string>
    <string name="objective_overview">Przeglądaj zadania</string>
    <string name="about_app">Aplikacja powstała w celu ułatwienia użytkownikom tej aplikacji w organizacji czasu oraz wpływu na zdrowie fizyczna jak i psychiczne (emocjonalne i umysłowe). W tej aplikacji możesz przypisać wybrane przez Ciebie zadania do określonego dnia oraz godziny. Dodatkowo stworzyliśmy możliwość tworzenia swoich własnych zadań.</string>
    <string name="app_rules">Aby przypisać zadanie do wybranego dnia kliknij w menu głównym na kalendarz, następnie wybierz dzień w jakim chcesz wykonywać zadanie. Kliknij przycisk "+Dodaj nowe zadanie". Teraz możesz wybrać kategorie zadań lub stworzyć swoje własne zadanie. Klikamy np. Zdrowie fizyczne oraz pojawiaja się nam lista zadań. Wybieramy interesujące nas zadanie po czym wpisujemy o której godzinie ma pojawić się powiadomienie w telefonie. Klikamy "Akceptuje". Nasze zadanie zostało pomyślnie dodane!</string>
</resources>